[#14101] message now returns ViewContextChange

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -377,6 +377,10 @@ paths:
       responses:
         '200':
           description: ''
+          content: 
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ViewContextChange'
   /view/{uuid}/constraint:
     get:
       tags:
