[#13954] add externalDatabase option for filter-editor-config

--- a/api-domain/src/main/resources/descriptors/filterexpression-api.yaml
+++ b/api-domain/src/main/resources/descriptors/filterexpression-api.yaml
@@ -384,6 +384,9 @@ components:
         readOnly:
           type: boolean
           default: false
+        extarnalDatabase:
+          type: boolean
+          default: false
         filterGroupsAction:
           type: UiAction
         groupFilter:
@@ -410,6 +413,9 @@ components:
       required: [availableActions]
       properties:
         readOnly:
+          type: boolean
+          default: false
+        extarnalDatabase:
           type: boolean
           default: false
         availableActions:
