--- a/api-domain/src/main/resources/descriptors/org-api.yaml
+++ b/api-domain/src/main/resources/descriptors/org-api.yaml
@@ -481,6 +481,10 @@ components:
           type: string
           description: |
             The property name of the parent property. If it is set then the selector page can show hierarchical view.
+        parentIdentifierPropertyName:
+          type: string
+          description: |
+            The property name of the unique identifier property. If it is set then the selector page can show hierarchical view.
         apiName:
           type: string
           description: |
