[#14391] adjust tests demonstrating inline reference list save failures

--- a/api-domain/src/main/resources/descriptors/sample-api.yaml
+++ b/api-domain/src/main/resources/descriptors/sample-api.yaml
@@ -192,3 +192,15 @@ components:
           type: array
           items:
             type: string
+
+    SampleGenericContainer:
+      description: |
+        An example object which refers to another of unknown type.
+      properties:
+        uri:
+          type: string
+          format: uri
+        content:
+          type: string
+          format: uri
+          description: Reference to PersistableObject (generic unknown type).
