[#15075] DocumentStorage - VersionStategy config

--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -771,3 +771,5 @@ components:
           $ref: '#/components/schemas/LangString'
     ObjectValidationSeverity:
       enum: [BLOCKER, ERROR, WARNING, INFO, OK]
+    VersionStrategy:
+      enum: [LATEST, EXACT, BYDEFINITION]
