[#15315] add widgetDescription field for SmartWidgetDefinition

--- a/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
+++ b/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
@@ -120,6 +120,8 @@ components:
         hint:
           description: This object define hint text and its position for the widget
           $ref: '#/components/schemas/SmartWidgetHint'
+        widgetDescription:
+          type: string
     SmartWidgetHint:
       type: object
       properties:
