--- a/api-domain/src/main/resources/descriptors/collection-api.yaml
+++ b/api-domain/src/main/resources/descriptors/collection-api.yaml
@@ -131,3 +131,57 @@ components:
           description: The score of the found item.
         value:          
           $ref: '#/components/schemas/VectorValue'
+    ObjectLookupParameter:
+      description: |
+        The parameters of an Object lookup.
+      type: object
+      required: []
+      properties:
+        limit:
+          description: |
+            The limit of items in the result.
+          type: integer
+        relevanceLimitPercent:
+          description: |
+            The limit of relevance in percent. If the relevance doesn't reach this level then it won't appear in the result.
+          type: number
+          format: float
+        relevanceLimitRange:
+          description: |
+            The limit of relevance range in percent. The most relevant result are closer to the first one then this limit. If we
+            set this properly then we can see the most relevant as the numberOfRelevant in the result will set to 1.
+          type: number
+          format: float
+    ObjectLookupResult:
+      description: |
+        The result an Object lookup.
+      type: object
+      required: [items]
+      properties:
+        numberOfRelevant:
+          description: |
+            The number of relevant items that are more or less on the same level of relevance. The lookup can accept a percentage 
+            as value to calculate which items are relevant. If one item should be selected then the most relevant will be selected but
+            it is important to know if there are any more relevant or the selected one is obviously the one we are looking for.
+          type: integer
+        items:
+          type: array
+          items:          
+            $ref: '#/components/schemas/ObjectLookupResultItem'
+    ObjectLookupResultItem:
+      description: |
+        The result item of an Object lookup.
+      type: object
+      required: [inputType, inputObject, vector]
+      properties:
+        id:
+          type: string
+          description: The unique identifier of the object found.
+        scoreInPercent:
+          type: number
+          format: float
+          description: The score of the found item converted to percent. 100% means that the given result is the one tat we are looking for.
+        objectAsMap:
+          description: The object itself.
+          type: object
+          additionalProperties: true
