--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -773,3 +773,46 @@ components:
       enum: [BLOCKER, ERROR, WARNING, INFO, OK]
     VersionStrategy:
       enum: [LATEST, EXACT, BYDEFINITION]
+
+    ObjectMappingDefinition:
+      description: |
+        This is a mapping definition that describes the mapping between two domain object.
+      type: object
+      required: [mappings]
+      properties:
+        sourceTypeQualifiedName:
+          type: string
+        targetTypeQualifiedName:
+          type: string
+        mappings:
+          type: array
+          items:
+            $ref: '#/components/schemas/ObjectPropertyMapping'
+    ObjectPropertyMapping:
+      description: |
+        This is a mapping definition that denotes the two property.
+      type: object
+      required: []
+      properties:
+        sourcePath:
+          type: array
+          items:
+            type: string
+        targetPath:
+          type: array
+          items:
+            type: string
+    ObjectPropertySet:
+      description: |
+        This is a mapping definition that describes the mapping between two domain object.
+      type: object
+      required: [properties]
+      properties:
+        typeQualifiedName:
+          type: string
+        properties:
+          type: array
+          items:
+            type: array
+            items:
+              type: string
