[#15485] vectorDbApi addPoints added

--- a/api-domain/src/main/resources/descriptors/collection-api.yaml
+++ b/api-domain/src/main/resources/descriptors/collection-api.yaml
@@ -101,6 +101,9 @@ components:
       type: object
       required: [inputType, inputObject, vector]
       properties:
+        id:
+          description: A unique identifier of the VectorValue.
+          type: string
         inputType:
           description: The type of the input object.
           type: string
