--- a/api-domain/src/main/resources/descriptors/mdm-api.yaml
+++ b/api-domain/src/main/resources/descriptors/mdm-api.yaml
@@ -161,8 +161,13 @@ components:
         selfContainedRefList:
           type: string
           description: |
-            The name of the self contained reference list like childer list. It is used to recurse on the object nodes if a complex 
+            The name of the self contained reference list like children list. It is used to recurse on the object nodes if a complex 
             hierarchy is saved via the MDMEntryApi.
+        vectorCollection:
+          type: VectorCollectionDescriptor
+          description: |
+            The Vector collection managed by the MDM Entry. It is maintained for the published object in the given entry. The under construction
+            state is not working.
     MDMTableColumnDescriptor:
       type: object
       description: |
