--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -773,3 +773,71 @@ components:
       enum: [BLOCKER, ERROR, WARNING, INFO, OK]
     VersionStrategy:
       enum: [LATEST, EXACT, BYDEFINITION]
+
+    ObjectMappingDefinition:
+      description: |
+        This is a mapping definition that describes the mapping between two domain object.
+      type: object
+      required: [mappings]
+      properties:
+        fromTypeQualifiedName:
+          type: string
+        toTypeQualifiedName:
+          type: string
+        mappings:
+          type: array
+          items:
+            $ref: '#/components/schemas/ObjectPropertyMapping'
+    ObjectPropertyMapping:
+      description: |
+        This is a mapping definition that denotes the two property.
+      type: object
+      required: []
+      properties:
+        fromPath:
+          type: array
+          items:
+            type: string
+        toPath:
+          type: array
+          items:
+            type: string
+    ObjectPropertySet:
+      description: |
+        This is a mapping definition that describes the mapping between two domain object.
+      type: object
+      required: [properties]
+      properties:
+        typeQualifiedName:
+          type: string
+        properties:
+          type: array
+          items:
+            type: array
+            items:
+              type: string
+    ObjectPropertyValueSet:
+      description: |
+        This is a set of value from an object. It can denote the type of the object but not necessarily. If we need
+        a subset of properties from an object then it is the best way to extract a value set and use this as a parameter.
+      type: object
+      required: [properties]
+      properties:
+        qualifiedName:
+          type: string
+        values:
+          type: array
+          items:
+            $ref: '#/components/schemas/ObjectPropertyValue'
+    ObjectPropertyValue:
+      description: |
+        This is a key - value pair where the key is a property path.
+      type: object
+      required: [path]
+      properties:
+        path:
+          type: array
+          items:
+            type: string
+        value:
+          type: object
