--- a/api-domain/src/main/resources/descriptors/collection-api.yaml
+++ b/api-domain/src/main/resources/descriptors/collection-api.yaml
@@ -120,9 +120,11 @@ components:
       type: object
       required: [inputType, inputObject, vector]
       properties:
-        id:
+        idPath:
           description: A unique identifier of the VectorValue.
-          type: string
+          type: array
+          items:
+            type: string
         inputType:
           description: The type of the input object.
           type: string
